--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #000000;
+}
+
+.container{
+  height: 100vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.calc{
+  padding: 20px;
+  margin: 20px;
+  background-color: transparent;
+  border-radius: 20px;
+  box-shadow: -1px -1px 10px 10px rgb(255,215,0, 0.5);
+  border: none;
+
+}
+
+#input{
+  width: 100%;
+  height: 80px;
+  color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  padding: 60px;
+  text-align: center;
+  margin: 10px;
+  background-color: transparent;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  box-shadow: -6px -6px 10px rgb(255,215,0, 0.5),6px 6px 10px rgb(255,215,0, 0.5) ;
 }
